# toml-config-manager

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: toml_config_manager.py
config/local/: .secrets.toml.example  config.toml  docker-compose.yaml  export.toml
examples/: Dockerfile  read_config.py
tests/integration/config/: test_toml_config_manager.py
tests/unit/config/: test_toml_config_manager.py
